--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()" class="card">
+<form (ngSubmit)="onSubmit()">
     <div class="input-group">
         <p>
             <label for="initial-investment">Initial Investment</label>
@@ -12,10 +12,10 @@
     <div class="input-group">
         <p>
             <label for="expected-return">Expected Return</label>
-            <input id="expected-return" name="expected-return" type="number" [(ngModel)]="expexted">
+            <input id="expected-return" name="expected-return" type="number" [(ngModel)]="expected">
         </p>
         <p>
-            <label for="duration">Duration</label>
+            <label for="duration">Duration (years)</label>
             <input id="duration" name="duration" type="number" [(ngModel)]="duration">
         </p>
     </div>
